--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <section class="section-1">
             <article>
-                <h2>Visit Our Clinic For More Details</h2>
+                <h2>Visit Our Clinic For More</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                 <button role="submit"><a href=""> Read More</a></button>
             </article>
