--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="section-1">
             <article>
                 <h2>Visit Our Website for more</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, officia.</p>
                 <button role="submit"><a href=""> Read More</a></button>
             </article>
         </section>
