section 1 h2 and p changed

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
         <section class="section-1">
             <article>
-                <h2>Visit Our Website for more</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, officia.</p>
+                 <h2>Visit Our Website for more Details</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                 <button role="submit"><a href=""> Read More</a></button>
             </article>
         </section>
