--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Murecho:wght@100;200;300&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,600&display=swap" rel="stylesheet">
-    <title>My first ever project</title>
+    <title>Space X</title>
 
 </head>
 
@@ -60,7 +60,7 @@
                 <a href="https://www.google.com/maps/place/CECOS+University+of+IT+and+Emerging+Sciences/@33.9561011,71.4351306,17z/data=!3m1!4b1!4m5!3m4!1s0x38d91a791ef1d7df:0xa76b49d8fd85bd2!8m2!3d33.9561011!4d71.4373193">
                     <h3>Maps </a>
                 </h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores odit aliquid optio repellat nihil porro earum quas odio quisquam delectus a, </p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores odit aliquid optio repellat nihil porro earum quas odio quisquam delectus. </p>
         </section>
 
         <section id="boxes" class="box-2">
@@ -68,7 +68,7 @@
                 <a href="https://developer.mozilla.org/en-US/">
                     <h3>Web Development</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nostrum quidem molestiae vel illo possimus! Itaque consequatur quasi exercitationem </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nostrum quidem molestiae vel illo possimus! Itaque consequatur quasi exercitationem. </p>
         </section>
 
         <section id="boxes" class="box-3">
@@ -76,7 +76,7 @@
                 <a href="https://analytics.google.com/analytics/web/provision/#/provision">
                     <h3>Google Analytics</a>
                 </h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat voluptate, ducimus asperiores doloremque dignissimos nihil deleniti? Dolores voluptas aut quis .</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat voluptate, ducimus asperiores doloremque dignissimos nihil deleniti? Dolores voluptas aut quis.</p>
         </section>
 
         <section id="boxes" class="box-4">
@@ -84,7 +84,7 @@
                 <a href="https://support.google.com/chrome/?hl=en#topic=9796470">
                     <h3>Support</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic reiciendis quod nesciunt, aut vitae recusandae delectus libero reprehenderit quasi saepe, deserunt, p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic reiciendis quod nesciunt, aut vitae recusandae delectus libero reprehenderit quasi saepe, deserunt. </p>
         </section>
 
         <section id="boxes" class="box-5">
