box fully anchored

--- a/index.html
+++ b/index.html
@@ -54,55 +54,58 @@
     </header>
 
     <main class="main">
-
-        <section id="boxes" class="box-1">
-            <a href="https://www.google.com/maps/place/CECOS+University+of+IT+and+Emerging+Sciences/@33.9561011,71.4351306,17z/data=!3m1!4b1!4m5!3m4!1s0x38d91a791ef1d7df:0xa76b49d8fd85bd2!8m2!3d33.9561011!4d71.4373193"> <i id="icon-1" class="fas fa-globe"></a></i>
-                <a href="https://www.google.com/maps/place/CECOS+University+of+IT+and+Emerging+Sciences/@33.9561011,71.4351306,17z/data=!3m1!4b1!4m5!3m4!1s0x38d91a791ef1d7df:0xa76b49d8fd85bd2!8m2!3d33.9561011!4d71.4373193">
-                    <h3>Maps </a>
+   <a id="boxes" class="box-1" href=" https://www.google.com/maps/place/CECOS+University+of+IT+and+Emerging+Sciences/@33.9561011,71.4351306,17z/data=!3m1!4b1!4m5!3m4!1s0x38d91a791ef1d7df:0xa76b49d8fd85bd2!8m2!3d33.9561011!4d71.4373193">
+            <section>
+                <i id="icon-1" class="fas fa-globe"></i>
+                <h3>Maps
                 </h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores odit aliquid optio repellat nihil porro earum quas odio quisquam delectus. </p>
-        </section>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores odit aliquid optio repellat nihil porro earum quas odio quisquam delectus a, </p>
+            </section>
+        </a>
 
-        <section id="boxes" class="box-2">
-            <a href="https://developer.mozilla.org/en-US/"> <i id="icon-1" class="fas fa-cog"></a></i>
-                <a href="https://developer.mozilla.org/en-US/">
-                    <h3>Web Development</a>
+        <a id="boxes" class="box-2" href="https://developer.mozilla.org/en-US/">
+            <section>
+                <i id="icon-1" class="fas fa-cog"></i>
+                <h3>Web Development
                 </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nostrum quidem molestiae vel illo possimus! Itaque consequatur quasi exercitationem. </p>
-        </section>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates nostrum quidem molestiae vel illo possimus! Itaque consequatur quasi exercitationem </p>
+            </section>
+        </a>
 
-        <section id="boxes" class="box-3">
-            <a href="https://analytics.google.com/analytics/web/provision/#/provision"> <i id="icon-1" class="fas fa-chart-pie"></a></i>
-                <a href="https://analytics.google.com/analytics/web/provision/#/provision">
-                    <h3>Google Analytics</a>
+        <a id="boxes" class="box-3" href="https://analytics.google.com/analytics/web/provision/#/provision">
+            <section>
+                <i id="icon-1" class="fas fa-chart-pie"></i>
+                <h3>Google Analytics
                 </h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat voluptate, ducimus asperiores doloremque dignissimos nihil deleniti? Dolores voluptas aut quis.</p>
-        </section>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat voluptate, ducimus asperiores doloremque dignissimos nihil deleniti? Dolores voluptas aut quis .</p>
+            </section>
+        </a>
 
-        <section id="boxes" class="box-4">
-            <a href="https://support.google.com/chrome/?hl=en#topic=9796470"> <i id="icon-1" class="fas fa-users"></a></i>
-                <a href="https://support.google.com/chrome/?hl=en#topic=9796470">
-                    <h3>Support</a>
+        <a id="boxes" class="box-4" href="https://support.google.com/chrome/?hl=en#topic=9796470">
+            <section>
+                <i id="icon-1" class="fas fa-users"></i>
+                <h3>Support
                 </h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic reiciendis quod nesciunt, aut vitae recusandae delectus libero reprehenderit quasi saepe, deserunt. </p>
-        </section>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic reiciendis quod nesciunt, aut vitae recusandae delectus libero reprehenderit quasi saepe, deserunt, </p>
+            </section>
+        </a>
 
-        <section id="boxes" class="box-5">
-            <a href=""> <i id="icon-1" class="fas fa-sliders-h"></a></i>
-                <a href="">
-                    <h3>Settingss</h3>
-                </a>
+        <a id="boxes" class="box-5" href="https://chrome.google.com/webstore/detail/settings/afcolgfopkbeailjgaablmhiemdnhlch?hl=en">
+            <section>
+                <i id="icon-1" class="fas fa-sliders-h"></i>
+                <h3>Settings</h3>
 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic reiciendis quod nesciunt, aut vitae recusandae delectus libero reprehenderit quasi saepe, deserunt, debitis molestiae maiores voluptatibus.</p>
-        </section>
-
-        <section id="boxes" class="box-6">
-            <a href="./img.html"> <i id="icon-1" class="fad fa-photo-video"></a></i>
+            </section>
+        </a>
+        <a id="boxes" class="box-6" href="./img.html">
+            <section>
+                <i id="icon-1" class="fad fa-photo-video"></i>
                 <h3>
-                    <a href="./img.html"> Gallery </a></h3>
+                    Gallery </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic reiciendis quod nesciunt, aut vitae recusandae delectus libero reprehenderit quasi saepe, deserunt, debitis molestiae maiores voluptatibus.</p>
-        </section>
-
+            </section>
+        </a>
     </main>
 
     <footer>
